--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
       rel="stylesheet"
@@ -85,28 +86,32 @@
             />
           </div>
         </section>
-         <!-- 
-        <section class="about">
-          <div class="about__image">
-            <img
-              class="about__image-img"
-              src="./images/desktop/image-stand-out.jpg"
-              alt="Describing stand out"
-            />
-          </div>
-          <div class="about__description">
-            <div class="description__container">
-              <h2 class="about__title">Stand out to the right audience</h2>
-              <p class="about__text">
-                Using a collaborative formula of designer, researchers,
-                photographer, videographers, and copywriters, we'll build and
-                extend your brand in digital places
-              </p>
-              <a class="about__link about__link--color-pink" href="http://"
-                >Learn more</a
-              >
+          
+        <section class="about" id="stand">
+          <section >
+            <div class="about__image">
+              <img
+                class="about__image-img"
+                src="./images/desktop/image-stand-out.jpg"
+                alt="Describing stand out"
+              />
             </div>
-          </div>
+          </section>
+          <section>
+            <div class="about__description">
+              <div class="description__container">
+                <h2 class="about__title">Stand out to the right audience</h2>
+                <p class="about__text">
+                  Using a collaborative formula of designer, researchers,
+                  photographer, videographers, and copywriters, we'll build and
+                  extend your brand in digital places
+                </p>
+                <a class="about__link about__link--color-pink" href="http://"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </section>
         </section>
       </div>
       <div class="expertise__container">
@@ -223,9 +228,9 @@
             class="gallery__picture"
           />
         </div>
-      </div>-->
+      </div>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <img src="./images/svg/logo2.svg" alt="logo" class="footer__logo" />
 
       <div class="footer__nav">
@@ -234,6 +239,14 @@
           <li class="footer__item"><a href="#services">Services</a></li>
           <li class="footer__item"><a href="#projects">Projects</a></li>
         </ul>
-    </footer>-->
+      </div>
+      <div class="footer__icon">
+        <a href=""> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        
+      </div>
+    </footer>
   </body>
 </html>
