--- a/index.html
+++ b/index.html
@@ -240,12 +240,13 @@
           <li class="footer__item"><a href="#projects">Projects</a></li>
         </ul>
       </div>
-      <div class="footer__icon">
-        <a href=""> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-        
+      <div class="footer__nav">
+        <p class="footer__icon">
+          <a href="" class="icon__item"><img src="./images/svg/icon-facebook.svg" alt=""></a>
+          <a href="" class="icon__item"><img src="./images/svg/icon-instagram.svg" alt=""></a>
+          <a href="" class="icon__item"><img src="./images/svg/icon-twitter.svg" alt=""></a>
+          <a href="" class="icon__item"><img src="./images/svg/icon-pinterest.svg" alt=""></a>
+        </p>
       </div>
     </footer>
   </body>
